--- a/control/assets/css/common.scss
+++ b/control/assets/css/common.scss
@@ -53,6 +53,11 @@ h2 {
     color: #ffffff;
     text-decoration-line: underline;
   }
+  
+  &.done{
+    color: #333333;
+    background: #cccccc;
+  }
 }
 
 .btn-red {
@@ -155,6 +160,7 @@ select:focus{
     .tbl_update_index {
       .tbl_row {
         .item_name {
+          word-break: break-word;
           text-align: center;
           padding: 0 25px;
         }
@@ -176,6 +182,10 @@ select:focus{
     }
     .btns {
       margin-top: 15px;
+    }
+    .cat_btns{
+      text-align: right;
+      margin-top: 0px;
     }
   }
   .new_cat {
@@ -272,7 +282,9 @@ select:focus{
 
 .cat_nav{
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
+  align-self: flex-end;
+  text-align: right;
   .btns {
     // justify-content: space-around;
     margin-top: 20px;
